--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   firebase_messaging: ^16.1.0
   flutter_local_notifications: ^19.5.0
   fl_chart: ^0.69.2
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
